@@ -6,4 +6,11 @@ recent
 window subclass ?
 
 plugins
+
+
+global tools
+
+
 my hilighting
+
+
