@@ -1,4 +1,6 @@
 0.5.1
+Done help.
+Removed browser command from prefs now use default browser ( as set by xdg ).
 Done About box.
 Removed book marks when closing tab.
 Single instace class code clean.
